--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "style-loader": "^1.0.0"
+  }
 }
